# EpiSim

./: .gitignore  1591256203.xml  1591256359.xml  1591256367.xml  1591256516.xml  1591256621.xml  1591256702.xml  1591270530.xml  1591270766.xml  1591270879.xml  1591270909.xml  1591270974.xml  1591461059.xml  1591554115.xml  1591556588.xml  1591598747.xml  1591599019.xml  1591611268.xml  1591611300.xml  1591616636.xml  1591617204.xml  1591617801.xml  1591641828.xml  1591641977.xml  1591643684.xml  EpiSim.sln  README.md  azure-pipelines.yml  errorcode.csv
CodeDB/EpiSim-Linux_Release-x64/: GlobalFileTable.000  GlobalFileTable.001
CodeDB/EpiSim-NewLinuxConfiguration-Win32/: GlobalFileTable.000  GlobalFileTable.001  codedb.lck
EpiGUI/: Form1.Designer.cs  Form1.cs  Program.cs
EpiSim/: CMakeLists.txt  CMakeLists.txt.old  CPUStateCalc.h  CUDAStateCalc.cu  EpiSim-Linux_Debug.vgdbsettings  EpiSim-Linux_Release.vgdbsettings  EpiSim-NewLinuxConfiguration.vgdbsettings  EpiSim.vcxproj  EpiSim.vcxproj.filters  Makefile  SDLout.h  errorcode.csv  example.xml  fileparser.h  gcc_Linux_Debug.h  gcc_Linux_Release.h  gcc_NewLinuxConfiguration.h  globs.h  linux_debug.mak  linux_release.mak  log.h  main.cpp  packages.config
EpiSim-Cmake/: CMakeLists.txt
EpiSim-Cmake/EpiSim-Cmake/: CMakeLists.txt  EpiSim-Cmake.cpp  EpiSim-Cmake.h
EpiUI/: .qmake.stash  1591210801.xml  EpiUI.pro  EpiUI.pro.user.03f925b  EpiUI.vcxproj  EpiUI.vcxproj.filters  EpiUI_en_GB.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  painter.h  ui_mainwindow.h
OGL_Testing/: OGL_Testing.vcxproj  main.cpp
(+14 files in other folders)
